# seoman

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
requirements/: dev.txt  requirements.txt
scripts/: format.sh  type_test.sh
seoman/: __main__.py  auth.py  exceptions.py  main.py  service.py
seoman/utils/: completion_utils.py  config_utils.py  date_utils.py  export_utils.py  path_utils.py  query_utils.py  selector_utils.py  service_utils.py
